--- a/libs/data_structures/CMakeLists.txt
+++ b/libs/data_structures/CMakeLists.txt
@@ -4,4 +4,5 @@ add_library(data_structures
         array_set/ordered_array_set.c
         array_set/ordered_array_set.h
         vector/vector.h
+        vector/vector.c
 )
