--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ set(CMAKE_C_STANDARD 11)
 add_executable(lab main.c
         libs/data_structures/vector/vector.h
         libs/data_structures/vector/vector.c
+        libs/data_structures/vector/vectorVoid.c
+        libs/data_structures/vector/vectorVoid.h
 )
 
 add_subdirectory(libs)
